<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainScreenActivity">

    <item
        android:id="@+id/achievements"
        android:title="@string/achievements"
        android:icon="@drawable/icon_achievements" />
    <item
        android:id="@+id/rankingIcon"
        android:title="@string/ranking"
        android:icon="@drawable/icon_ranking" />
    <item
        android:id="@+id/preferenceIcon"
        android:title="@string/preference"
        android:icon="@drawable/icon_preferences" />
    <item
        android:id="@+id/tutorialIcon"
        android:title="@string/tutorial"
        android:icon="@drawable/icon_tutorial" />
    <item
        android:id="@+id/aboutIcon"
        android:title="@string/about"
        android:icon="@drawable/icon_about" />
    <item
        android:id="@+id/mapIcon"
        android:title="@string/map"
        android:icon="@drawable/icon_map"/>
</menu>