<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context="gov.jbb.missaonascente.view.PreferenceScreenActivity">

    <TextView
        android:id="@+id/editAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleEditAccount"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/texts_border"
        android:layout_below="@id/editAccountTextView">

        <TextView
            android:id="@+id/nicknameShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickNameShow"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/emailShow"
            android:layout_below="@id/nicknameShow"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailShow"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>

    <Button
        android:id="@+id/editNicknameButton"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/information"
        android:layout_centerHorizontal="true"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@drawable/shape_rectangle_white"
        android:text="@string/editNickname"
        android:textStyle="bold"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/deleteAccount"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNicknameButton"
        android:layout_centerHorizontal="true"
        android:paddingRight="23dp"
        android:paddingLeft="23dp"
        android:background="@drawable/shape_rectangle_white"
        android:text="@string/deleteAccountBigSizeText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:typeface="sans"
        android:background="@drawable/shape_rectangle_green"
        android:drawableLeft="@mipmap/ic_leave"
        android:textColor="#FFFFFF"
        android:text="@string/signOut"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingRight="20dp"
        android:layout_marginBottom="50dp" />
</RelativeLayout>