<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_screens"
    tools:context="gov.jbb.missaonascente.view.AboutActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/titleAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8sp"
                android:paddingTop="8sp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutDescription"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/titleDevelopers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp" />

            <TextView
                android:id="@+id/developers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devGroup"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/titleSutec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sutec"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp" />

            <TextView
                android:id="@+id/sutec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sutecGroup"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
