<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jbbmobile.view.StartScreenActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_start_screen" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350sp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/normalSignIn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/colorGreen"
            android:elevation="2dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:typeface="sans"
            android:textSize="20dp" />

        <Button
            android:id="@+id/googleSignIn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_google_signin_btn_text_light"
            android:elevation="2dp"
            android:text="@string/signInWithGoogle"
            android:textSize="12dp" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_marginTop="15dp"
            android:text="@string/signUp"
            android:textStyle="bold"
            android:textSize="14dp"
            android:typeface="sans" />

    </LinearLayout>

</RelativeLayout>
